--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -17,6 +17,6 @@
   <option value="student">Student</option>
   <option value="mentor">Mentor</option>
   </select>
-  <button type="submit" value="Submit">Submit</button>
+  <button type="submit" value=>Register</button>
 </body>
 </html>
