--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -9,5 +9,6 @@
 <p>E-mail address</p>
 <input type="email"></input>
 <p>Password</p>
-</body>
+<input type = "password"</input>
+<button type="submit">Login</button>
 </html>
