--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="login.css">
     <meta charset="UTF-8">
     <title>Login Page</title>
 </head>
