--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -10,7 +10,7 @@
 <p>E-mail address</p>
 <input type="email"></input>
 <p>Password</p>
-<input type = "password"</input>
+<input type = "password"></input>
 <button type="submit">Login</button>
 </body>
 </html>
