--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -9,9 +9,9 @@
     <h1>Please Register</h1>
   </header>
   <p>Please Enter your name</p>
-  <input type="text"/>
+  <input type="text" placeholder="Firstname/Lastname"/>
   <p>Please Enter your E-mail address</p>
-  <input type="email"/>
+  <input type="email" placeholder="e-mail"/>
   <p>Please select your status</p>
   <select>
   <option value="student">Student</option>
