--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -14,6 +14,8 @@
       <input type="text" placeholder="Firstname/Lastname"/>
       <p>Please Enter your E-mail address</p>
       <input type="email" placeholder="e-mail"/>
+      <p>Please Enter your Password</p>
+      <input type="password" placeholder="*****"/>
       <p>Please select your status</p>
       <select>
       <option value="student">Student</option>
