--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -8,9 +8,9 @@
 <body>
   <h1>Login Page</h1>
 <p>E-mail address</p>
-<input type="email" placeholder="Example@example.com"></input>
+<input type="email" placeholder="Example@example.com"/>
 <p>Password</p>
-<input type = "password" placeholder="*****"></input>
+<input type = "password" placeholder="*****"/>
 <button type="submit">Login</button>
 </body>
 </html>
