--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -12,5 +12,6 @@
 <p>Password</p>
 <input type = "password" placeholder="*****"/>
 <button type="submit">Login</button>
+<button type="submit" value=>Create Account</button>
 </body>
 </html>
