--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -12,6 +12,8 @@
 <p>Password</p>
 <input type = "password" placeholder="*****"/>
 <button type="submit">Login</button>
-<button type="submit" value=>Create Account</button>
+<form action="register.html">
+    <button type="submit" value=>Create Account</button>
+</form>
 </body>
 </html>
