--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -8,12 +8,14 @@
 <body>
   <h1>Login Page</h1>
 <p>E-mail address</p>
-<input type="email" placeholder="Example@example.com"/>
-<p>Password</p>
-<input type = "password" placeholder="*****"/>
-<button type="submit">Login</button>
-<form action="register.html">
-    <button type="submit" value=>Create Account</button>
+<form action="login">
+    <input type="email" placeholder="Example@example.com"/>
+    <p>Password</p>
+    <input type = "password" placeholder="*****"/>
+    <button type="submit">Login</button>
+    <form action="register.html">
+        <button type="submit" value=>Create Account</button>
+    </form>
 </form>
 </body>
 </html>
