--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -13,6 +13,11 @@
     <p>Password</p>
     <input type = "password" placeholder="*****"/>
     <button type="submit">Login</button>
+    <p>Please select your status</p>
+    <select>
+        <option value="student">Student</option>
+        <option value="mentor">Mentor</option>
+    </select>
     <form action="register.html">
         <button type="submit" value=>Create Account</button>
     </form>
