--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -8,13 +8,13 @@
 <body>
   <h1>Login Page</h1>
 <p>E-mail address</p>
-<form action="login">
-    <input type="email" placeholder="Example@example.com"/>
+<form action="login" >
+    <input name = "email" type="email" placeholder="Example@example.com"/>
     <p>Password</p>
-    <input type = "password" placeholder="*****"/>
+    <input name = "password" type = "password" placeholder="*****"/>
     <button type="submit">Login</button>
     <p>Please select your status</p>
-    <select>
+    <select name = "type">
         <option value="student">Student</option>
         <option value="mentor">Mentor</option>
     </select>
