--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -11,15 +11,15 @@
   </header>
   <form action="register">
       <p>Please Enter your name</p>
-      <input type="text" placeholder="Firstname/Lastname"/>
+      <input name = "name" type="text" placeholder="Firstname/Lastname"/>
       <p>Please Enter your E-mail address</p>
-      <input type="email" placeholder="e-mail"/>
+      <input name = "email"type="email" placeholder="e-mail"/>
       <p>Please Enter your Password</p>
-      <input type="password" placeholder="*****"/>
+      <input name = "password" type="password" placeholder="*****"/>
       <p>Please select your status</p>
-      <select>
-      <option value="student">Student</option>
-      <option value="mentor">Mentor</option>
+      <select name = "type">
+        <option value="student">Student</option>
+        <option value="mentor">Mentor</option>
       </select>
       <button type="submit" value=>Register</button>
   </form>
