login page create account button

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -18,9 +18,7 @@
         <option value="student">Student</option>
         <option value="mentor">Mentor</option>
     </select>
-    <form action="register.html">
-        <button type="submit" value=>Create Account</button>
-    </form>
+    <a href="register.html" class="button">Create Account</a>
 </form>
 </body>
 </html>
