--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -16,9 +16,9 @@
       <p>Enter your e-mail address:</p>
       <input name = "email" type="email" placeholder="E-mail" required/>
       <p>Enter your password:</p>
-      <input name = "password" type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" placeholder="*****"/>
+      <input name = "password1" type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" placeholder="*****"/>
       <p>Confirm password:</p>
-      <input name = "password" type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required placeholder="*****"/>
+      <input name = "password2" type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required placeholder="*****"/>
       <div id="message">
           <h3>Password must contain the following:</h3>
           <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
