--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <link rel="stylesheet" href="login.css">
@@ -18,7 +17,7 @@
         <option value="student">Student</option>
         <option value="mentor">Mentor</option>
     </select>
-    <a href="register.html" class="button">Create Account</a>
+    <a href="register.jsp" class="button">Create Account</a>
 </form>
 </body>
 </html>
