--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title></title>
+    <script type="text/javascript">
+        function load(){
+            window.location.href="login.html";
+        }
+    </script>
 </head>
-<body>
+<body onload="load()">
 </body>
 </html>
