--- a/src/main/webapp/welcome.html
+++ b/src/main/webapp/welcome.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="welcome.css">
 </head>
 <body>
-  <form action = "welcome" method = "get">
+  <form action = "welcome.html" method = "get">
     <div class="topnav">
       <a class="active" href="#home">Home</a>
       <a href="#users">Users</a>
       <a href="#Profile">Profile</a>
       <a href="#Curriculum">Curriculum</a>
-      <a id = "logout" href="Logout">Logout<a/>
+      <a id = "logout" href="Logout">Logout</a>
     </div>
     <div class = "name">
       <p>Name:</p>
