--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="login.css">
+  <link rel="stylesheet" href="css/login.css">
     <meta charset="UTF-8">
     <title>Login Page</title>
 </head>
