--- a/src/main/webapp/welcome.html
+++ b/src/main/webapp/welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome Page</title>
-    <link rel="stylesheet" href="welcome.css">
+    <link rel="stylesheet" href="css/welcome.css">
 </head>
 <body>
   <form action = "welcome.html" method = "get">
