--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -5,19 +5,20 @@
     <title>Login Page</title>
 </head>
 <body>
-  <h1>Login Page</h1>
-<p>E-mail address</p>
 <form action="login" >
-    <input name = "email" type="email" placeholder="Example@example.com"/>
-    <p>Password</p>
-    <input name = "password" type = "password"  placeholder="*****"/>
-    <button type="submit">Login</button>
-    <p>Please select your status</p>
-    <select name = "type">
-        <option value="student">Student</option>
-        <option value="mentor">Mentor</option>
-    </select>
-    <a href="register.jsp" class="button">Create Account</a>
+    <div class="center-box">
+        <p>E-mail address</p>
+        <input name = "email" type="email" placeholder="Example@example.com"/>
+        <p>Password</p>
+        <input name = "password" type = "password"  placeholder="*****"/>
+        <p>Please select your status</p>
+        <select name = "type">
+            <option value="student">Student</option>
+            <option value="mentor">Mentor</option>
+        </select><br/>
+        <button type="submit">Login</button><br/>
+        <a href="register.jsp" class="button"> <h2>Click Here to Create an Account</h2></a>
+    </div>
 </form>
 </body>
 </html>
