--- a/src/main/webapp/welcome.html
+++ b/src/main/webapp/welcome.html
@@ -12,7 +12,7 @@
       <a href="#users">Users</a>
       <a href="#Profile">Profile</a>
       <a href="#Curriculum">Curriculum</a>
-      <a id = "logout" href="Logout">Logout</a>
+      <a id="logout" href="login.html" name="logout">Logout</a>
     </div>
     <div class = "name">
       <p>Name:</p>
