--- a/src/main/webapp/welcome.html
+++ b/src/main/webapp/welcome.html
@@ -9,7 +9,7 @@
   <form action = "welcome.html" method = "get">
     <div class="topnav">
       <a class="active" href="#home">Home</a>
-      <a href="#users">Users</a>
+      <a href="userlistpage">Users</a>
       <a href="#Profile">Profile</a>
       <a href="#Curriculum">Curriculum</a>
       <a id="logout" href="login.html" name="logout">Logout</a>
@@ -19,7 +19,5 @@
       <p>Role:</p>
     </div>
   </form>
-
-
 </body>
 </html>
