--- a/src/main/webapp/welcome.html
+++ b/src/main/webapp/welcome.html
@@ -11,7 +11,7 @@
       <a class="active" href="#home">Home</a>
       <a href="userlistpage">Users</a>
       <a href="#Profile">Profile</a>
-      <a href="#Curriculum">Curriculum</a>
+      <a id = "curriculum" href="curriculum.jsp">Curriculum</a>
       <a id="logout" href="login.html" name="logout">Logout</a>
     </div>
     <div class = "name">
