--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -12,7 +12,7 @@
         <p>Password</p>
         <input type = "password" name = "password" type = "password"  placeholder="*****"/><br/>
         <button type="submit">Login</button><br/>
-        <a href="register.jsp" class="button"> <h2>Click Here to Create an Account</h2></a>
+        <a href="register.jsp" class="button"> <h4 class="modal-title">Create an Account</h4></a>
     </div>
 </form>
 </body>
