--- a/src/main/webapp/assignment.html
+++ b/src/main/webapp/assignment.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <link rel="stylesheet" href="css/assignment.css">
     <meta charset="UTF-8">
@@ -8,19 +8,22 @@
 <body>
 <div class="center-box" >
     <h2>
-        Assignment title
     </h2>
-    <input></input>
+    <input placeholder="Assignment title...">
 </div>
 <div class="center-box">
     <h1>
-        Assignment text
     </h1>
-    <textarea cols="70" rows="10"></textarea>
+    <textarea placeholder="Assignment text..." cols="70" rows="10"></textarea>
 </div>
 <div class="center-box">
-    <button type="submit">Publish now</button><br/>
+</br>
+    <input placeholder="Max score">
+</div>
+<div class="center-box">
+    <button type="submit">Publish now</button>
     <button type="submit">Publish later</button><br/>
 </div>
+
 </body>
 </html>
